--- a/app/src/main/res/layout/dialog_musica_api.xml
+++ b/app/src/main/res/layout/dialog_musica_api.xml
@@ -109,7 +109,7 @@
                 <TextView
                     android:id="@+id/textViewAlbum"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:textColor="#CD2604"
                     android:textSize="18sp" />
             </LinearLayout>
