--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".fragment.HomeFragment">
 
     <ImageView
         android:id="@+id/imageView4"
@@ -19,17 +19,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ListaDeMusicasRecycle"
-        android:layout_width="403dp"
+        android:layout_width="0dp"
         android:layout_height="589dp"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:layout_constraintVertical_bias="0.0"
-        tools:listitem="@layout/lista_musica" >
+        tools:listitem="@layout/lista_musica">
 
     </androidx.recyclerview.widget.RecyclerView>
 
